--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="fl_left"> 
       <!-- ################################################################################################ -->
       <ul class="nospace">
-        <li><i class="fas fa-phone rgtspace-5"></i> +00 (123) 456 7890</li>
-        <li><i class="far fa-envelope rgtspace-5"></i> info@domain.com</li>
+        <li><i class="fas fa-phone rgtspace-5"></i> +60 (014) 544 3086</li>
+        <li><i class="far fa-envelope rgtspace-5"></i> cliff.julius69@gmail.com</li>
       </ul>
       <!-- ################################################################################################ -->
     </div>
