--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ Licence URI: https://www.os-templates.com/template-terms
     <div id="pageintro" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <article>
-        <h3 class="heading">Dapibus ligula convallis</h3>
-        <p>A massa etiam augue nunc lectus duis eget libero non nisi lobortis suscipit praesent viverra nam dapibus orci non erat aliquam erat volutpat.</p>
-        <footer><a class="btn" href="#">Gravida sem neque</a></footer>
+        <h3 class="heading">Welcome to my Portfolio</h3>
+        <p>A compilation of my Selected Best Works and personal Projects</p>
+        <footer><a class="btn" href="#">Hire Me!</a></footer>
       </article>
       <!-- ################################################################################################ -->
     </div>
