--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ Licence URI: https://www.os-templates.com/template-terms
         <li class="one_third first">
           <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
             <figcaption>
-              <h6 class="heading">Mollis suscipit</h6>
+              <h6 class="heading">Graphic Design</h6>
               <div>
-                <p>Eu adipiscing sit amet ante donec vulputate magna duis posuere tellus vel fringilla auctor nisi arcu.</p>
+                <p>Selected Graphic Design work</p>
               </div>
             </figcaption>
           </figure>
@@ -88,9 +88,9 @@ Licence URI: https://www.os-templates.com/template-terms
         <li class="one_third">
           <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
             <figcaption>
-              <h6 class="heading">Vestibulum maecenas</h6>
+              <h6 class="heading">Illustrations</h6>
               <div>
-                <p>Urna at congue lectus nisi ac neque suspendisse vitae sapien eu mi placerat tincidunt sed eget elit in.</p>
+                <p>Selected UI & UX work</p>
               </div>
             </figcaption>
           </figure>
@@ -98,9 +98,9 @@ Licence URI: https://www.os-templates.com/template-terms
         <li class="one_third">
           <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
             <figcaption>
-              <h6 class="heading">Pellentesque enim</h6>
+              <h6 class="heading">UI & UX</h6>
               <div>
-                <p>Imperdiet pede sit amet elit aenean sollicitudin eros quis cursus feugiat lacus diam tempor tortor vel.</p>
+                <p>Selected Illustration work</p>
               </div>
             </figcaption>
           </figure>
