--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <li class="one_third first">
           <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
             <figcaption>
-              <h6 class="heading">Mollis suscipit</h6>
+              <h6 class="heading">Graphic Design</h6>
               <div>
                 <p>Eu adipiscing sit amet ante donec vulputate magna duis posuere tellus vel fringilla auctor nisi arcu.</p>
               </div>
@@ -92,7 +92,7 @@
         <li class="one_third">
           <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
             <figcaption>
-              <h6 class="heading">Vestibulum maecenas</h6>
+              <h6 class="heading">Illustrations</h6>
               <div>
                 <p>Urna at congue lectus nisi ac neque suspendisse vitae sapien eu mi placerat tincidunt sed eget elit in.</p>
               </div>
@@ -102,7 +102,7 @@
         <li class="one_third">
           <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
             <figcaption>
-              <h6 class="heading">Pellentesque enim</h6>
+              <h6 class="heading">UI, UX, & Websites Design</h6>
               <div>
                 <p>Imperdiet pede sit amet elit aenean sollicitudin eros quis cursus feugiat lacus diam tempor tortor vel.</p>
               </div>
@@ -110,77 +110,6 @@
           </figure>
         </li>
       </ul>      
-
-    <!-- second part -->
-
-      <ul class="nospace group btmspace-80">
-        <li class="one_third first">
-          <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
-            <figcaption>
-              <h6 class="heading">Mollis suscipit</h6>
-              <div>
-                <p>Eu adipiscing sit amet ante donec vulputate magna duis posuere tellus vel fringilla auctor nisi arcu.</p>
-              </div>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="one_third">
-          <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
-            <figcaption>
-              <h6 class="heading">Vestibulum maecenas</h6>
-              <div>
-                <p>Urna at congue lectus nisi ac neque suspendisse vitae sapien eu mi placerat tincidunt sed eget elit in.</p>
-              </div>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="one_third">
-          <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
-            <figcaption>
-              <h6 class="heading">Pellentesque enim</h6>
-              <div>
-                <p>Imperdiet pede sit amet elit aenean sollicitudin eros quis cursus feugiat lacus diam tempor tortor vel.</p>
-              </div>
-            </figcaption>
-          </figure>
-        </li>
-      </ul>
-
-
-    <!-- third part -->
-    
-    <ul class="nospace group btmspace-80">
-      <li class="one_third first">
-        <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
-          <figcaption>
-            <h6 class="heading">Mollis suscipit</h6>
-            <div>
-              <p>Eu adipiscing sit amet ante donec vulputate magna duis posuere tellus vel fringilla auctor nisi arcu.</p>
-            </div>
-          </figcaption>
-        </figure>
-      </li>
-      <li class="one_third">
-        <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
-          <figcaption>
-            <h6 class="heading">Vestibulum maecenas</h6>
-            <div>
-              <p>Urna at congue lectus nisi ac neque suspendisse vitae sapien eu mi placerat tincidunt sed eget elit in.</p>
-            </div>
-          </figcaption>
-        </figure>
-      </li>
-      <li class="one_third">
-        <figure><a class="imgover" href="#"><img src="images/demo/348x400.png" alt=""></a>
-          <figcaption>
-            <h6 class="heading">Pellentesque enim</h6>
-            <div>
-              <p>Imperdiet pede sit amet elit aenean sollicitudin eros quis cursus feugiat lacus diam tempor tortor vel.</p>
-            </div>
-          </figcaption>
-        </figure>
-      </li>
-    </ul>
 
     <!-- ################################################################################################ -->
     <hr class="btmspace-80">
